@@ -184,7 +184,7 @@ def get_md5_checksum(filename):
         return hashlib.md5(bytes).hexdigest()
 
 
-def measure_call(call, output_file, container_id=None):
+def measure_call(call, output_file, container_id=None, expected_code=None):
     """Run the given command, return measured performance data."""
     # Jail with container, if requested
     full_call = get_container_call(container_id=container_id, call=call)
@@ -198,6 +198,10 @@ def measure_call(call, output_file, container_id=None):
         preexec_fn=set_hour_timeout,
     )
     post_stats = os.times()
+    if expected_code is not None and process.returncode != expected_code:
+        log.error("Detected unexpected solver behavior, printing output")
+        print("STDOUT: ", process.stdout.decode("utf_8"))
+        print("STDERR: ", process.stderr.decode("utf_8"))
     return {
         "cpu_time_s": (post_stats[2] + post_stats[3]) - (pre_stats[2] + pre_stats[3]),
         "wall_time_s": post_stats[4] - pre_stats[4],
@@ -577,7 +581,10 @@ class Benchmarker(object):
 
                     with open(output_path, "w") as output_file:
                         solve_result = measure_call(
-                            solve_call, output_file, container_id=self.container_id
+                            solve_call,
+                            output_file,
+                            container_id=self.container_id,
+                            expected_code=benchmark["expected_status"],
                         )
                     solve_result["validated"] = None
                     solve_result["conflicts"] = self.solver.get_conflicts_from_log(
